# amazon-freertos-esp32-example

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
freertos_configs/: FreeRTOSConfig.h  README.md
main/: CMakeLists.txt  memfault_platform_device_info.c  stub.c
src/: config.c  memfault_platform_config.h
